# cpp-uuidv7

./: .gitignore  CMakeLists.txt  LICENSE  README-ja.md  README.md  uuidv7.natvis
cmake/: uuidv7Config.cmake  uuidv7Config.cmake.in
include/uuidv7/: generator.hpp  uuidv7.hpp
src/: generator.cpp  uuidv7.cpp  uuidv7_bsd.cpp  uuidv7_openssl.cpp  uuidv7_unix.cpp  uuidv7_windows.cpp
src/csprng/: bsd.cpp  openssl.cpp  unix.cpp  windows.cpp
test/: CMakeLists.txt  tests.cpp
